tests/snapshots/parse__multiple_artifacts.snap
---
source: tests/parse.rs
expression: "parse(\"multiple-artifacts\")"
---
Manifest {
    root: Group {
        label: None,
        platforms: [],
        runtimes: [],
        includes: [],
        directories: [
            Directory {
                path: None,
                addons: [],
                packages: [
                    Package {
                        label: "big-plugin",
                        sources: [
                            Download(
                                Download {
                                    url: "https://example.com/big-plugin-2.0.jar",
                                    path: None,
                                    checksums: Checksums(
                                        {},
                                    ),
                                    size: None,
                                },
                            ),
                        ],
                        build: None,
                        artifacts: [
                            PackageArtifact {
                                from: "big-plugin-2.0.jar",
                                to: Some(
                                    "plugins/big-plugin.jar",
                                ),
                            },
                            PackageArtifact {
                                from: "big-plugin-2.0.jar",
                                to: Some(
                                    "plugins/backup/big-plugin.jar",
                                ),
                            },
                        ],
                    },
                ],
                copies: [],
                symlinks: [],
            },
        ],
        targets: [
            Target {
                name: "server",
                path: None,
                kind: Server,
            },
        ],
        subgroups: [],
    },
}
