tests/snapshots/parse__multiple_targets.snap
---
source: tests/parse.rs
expression: "parse(\"multiple-targets\")"
---
Manifest {
    root: Group {
        label: None,
        platforms: [],
        runtimes: [],
        directories: [],
        targets: [],
        subgroups: [
            Group {
                label: Some(
                    "proxy",
                ),
                platforms: [],
                runtimes: [],
                directories: [
                    Directory {
                        path: Some(
                            "plugins",
                        ),
                        presets: [
                            Preset {
                                identifier: "modrinth:luckperms",
                                version: Some(
                                    "latest",
                                ),
                            },
                        ],
                        packages: [],
                        copies: [],
                        symlinks: [],
                    },
                ],
                targets: [
                    Target {
                        name: "proxy",
                        path: Some(
                            "./run/proxy",
                        ),
                        kind: Server,
                    },
                ],
                subgroups: [],
            },
            Group {
                label: Some(
                    "lobby",
                ),
                platforms: [],
                runtimes: [],
                directories: [
                    Directory {
                        path: Some(
                            "plugins",
                        ),
                        presets: [
                            Preset {
                                identifier: "modrinth:spark",
                                version: Some(
                                    "latest",
                                ),
                            },
                        ],
                        packages: [],
                        copies: [],
                        symlinks: [],
                    },
                ],
                targets: [
                    Target {
                        name: "lobby",
                        path: Some(
                            "./run/lobby",
                        ),
                        kind: Server,
                    },
                ],
                subgroups: [],
            },
            Group {
                label: Some(
                    "smp",
                ),
                platforms: [],
                runtimes: [],
                directories: [
                    Directory {
                        path: Some(
                            "mods",
                        ),
                        presets: [
                            Preset {
                                identifier: "modrinth:create",
                                version: Some(
                                    "latest",
                                ),
                            },
                        ],
                        packages: [],
                        copies: [],
                        symlinks: [],
                    },
                ],
                targets: [
                    Target {
                        name: "smp-server",
                        path: Some(
                            "./run/smp",
                        ),
                        kind: Server,
                    },
                    Target {
                        name: "smp-pack",
                        path: Some(
                            "./run/smp-pack",
                        ),
                        kind: Packwiz,
                    },
                ],
                subgroups: [],
            },
        ],
    },
}
