tests/snapshots/parse__package_with_path.snap
---
source: tests/parse.rs
expression: "parse(\"package-with-path\")"
---
Manifest {
    root: Group {
        label: None,
        platforms: [],
        runtimes: [],
        includes: [],
        directories: [
            Directory {
                path: None,
                addons: [],
                packages: [
                    Package {
                        label: "webmap",
                        sources: [
                            Download(
                                Download {
                                    url: "https://example.com/bluemap-4.0.jar",
                                    path: Some(
                                        "downloads/bluemap.jar",
                                    ),
                                    checksums: Checksums(
                                        {},
                                    ),
                                    size: None,
                                },
                            ),
                        ],
                        build: None,
                        artifacts: [
                            PackageArtifact {
                                from: "downloads/bluemap.jar",
                                to: Some(
                                    "plugins/bluemap.jar",
                                ),
                            },
                        ],
                    },
                    Package {
                        label: "custom-mod",
                        sources: [
                            Git(
                                Git {
                                    url: "https://github.com/example/custom-mod.git",
                                    path: Some(
                                        "src/mod",
                                    ),
                                },
                            ),
                        ],
                        build: Some(
                            PackageBuild {
                                tasks: [
                                    Execute(
                                        ExecuteTask {
                                            program: "./gradlew",
                                            arguments: [],
                                            directory: Some(
                                                "src/mod",
                                            ),
                                        },
                                    ),
                                ],
                            },
                        ),
                        artifacts: [
                            PackageArtifact {
                                from: "build/libs/custom-mod.jar",
                                to: Some(
                                    "mods/custom-mod.jar",
                                ),
                            },
                        ],
                    },
                ],
                copies: [],
                symlinks: [],
            },
        ],
        targets: [
            Target {
                name: "server",
                path: None,
                kind: Server,
            },
        ],
        subgroups: [],
        meta: {},
    },
}
