tests/snapshots/parse__root_files.snap
---
source: tests/parse.rs
expression: "parse(\"root-files\")"
---
Manifest {
    root: Group {
        label: None,
        platforms: [],
        runtimes: [],
        includes: [],
        directories: [
            Directory {
                path: Some(
                    "plugins",
                ),
                addons: [
                    Modrinth(
                        ModrinthAddon {
                            id: "luckperms",
                            version: Some(
                                "latest",
                            ),
                            files: [],
                        },
                    ),
                ],
                packages: [],
                copies: [],
                symlinks: [],
            },
            Directory {
                path: None,
                addons: [],
                packages: [],
                copies: [
                    CopyFile {
                        from: "config/server.properties",
                        to: "server.properties",
                        overwrite: true,
                    },
                    CopyFile {
                        from: "config/bukkit.yml",
                        to: "bukkit.yml",
                        overwrite: false,
                    },
                ],
                symlinks: [
                    SymlinkFile {
                        from: "config/permissions.yml",
                        to: "plugins/LuckPerms/permissions.yml",
                    },
                ],
            },
        ],
        targets: [
            Target {
                name: "smp",
                path: Some(
                    "./run/smp",
                ),
                kind: Server,
            },
        ],
        subgroups: [],
        meta: {},
    },
}
