tests/snapshots/parse__server_with_presets.snap
---
source: tests/parse.rs
expression: "parse(\"server-with-presets\")"
---
Manifest {
    root: Group {
        label: None,
        runtimes: [],
        directories: [
            Directory {
                path: Some(
                    "plugins",
                ),
                presets: [
                    Preset {
                        identifier: "modrinth:luckperms",
                        version: Some(
                            "latest",
                        ),
                    },
                    Preset {
                        identifier: "modrinth:spark",
                        version: Some(
                            "latest",
                        ),
                    },
                    Preset {
                        identifier: "modrinth:essentialsx",
                        version: Some(
                            "latest",
                        ),
                    },
                ],
                packages: [],
                copies: [],
                symlinks: [],
            },
            Directory {
                path: Some(
                    "mods",
                ),
                presets: [
                    Preset {
                        identifier: "modrinth:fabric-api",
                        version: Some(
                            "latest",
                        ),
                    },
                ],
                packages: [],
                copies: [],
                symlinks: [],
            },
        ],
        targets: [
            Target {
                name: "smp",
                path: Some(
                    "./run/smp",
                ),
                kind: Server,
            },
        ],
        subgroups: [],
    },
}
